BIG REFACTORING - merge all pom by removing sub modules